--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.75",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "md5": "^2.3.0"
   }
 }
